SERVER-87459 $bucketAuto $mergeObject does not obey input order (#21425)

GitOrigin-RevId: 53070354809680297931b0fc8c5dacef05c5b776